Fixed margin issue of boxes on mobile

--- a/What we do/landing-page.css
+++ b/What we do/landing-page.css
@@ -65,6 +65,7 @@
 .box {
     background-size: cover;
     height: 250px;
+    margin-bottom: 20px;
 }
 #instruction {
     background-image: url(http://lfs-ps.sites.olt.ubc.ca/files/2016/10/21352299053_f298e90871_z.jpg);
